# paris-hackathon-2026-training

./: .gitignore  PLAN.md  README.md  model.py  model_pieter.py  model_plus_plus.py  model_yannick.py  qwen_ours.py  requirements.txt  results.md  submit.sh  submit_model_scale.sh  submit_nathan copy.sh  submit_nathan.sh  submit_pieter.sh  submit_yannick.sh  train.py  train_model_design.py  train_pieter.py  train_torchtitan.py  train_yannick.py
ai_slope/: .gitignore  SKILL.md  model.py  requirements.txt  smoke.py  submit.sh  submit_1node.sh  test_cluster.sh  test_weight_mapping.py  train.py
ai_slope/docs/: cluster_review.md
ai_slope/docs/superpowers/specs/: 2026-04-09-megatron-core-training-design.md
ai_slope/dry-run/: 1gpu_smoke.sh  nccl_smoke.sh  nccl_test.py
ai_slope/fa4-test/: model.py  submit_fa4.sh  train.py
ai_slope/fp8-fa4-combined/: checkpoint_summary.json  model.py  submit_fp8_te.sh  train.py
ai_slope/fp8-te-linear/: checkpoint_summary.json  checkpoint_summary_1.json  checkpoint_summary_2.json  checkpoint_summary_3.json  submit_fp8.sh  submit_fp8_te.sh  train.py
ai_slope/fp8-train/: checkpoint_summary.json  train.py
ai_slope/h100-1b-single/: model.py  pyproject.toml  run.sh  train.py
experiments/model_scale_20260409_131633/: m110_summary.json  m261_summary.json  m389_summary.json  m666_summary.json  m958_summary.json  results.csv  results.json
